--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1"
   }
