--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "http://joeweath.github.io/detailed-frontend",
   "name": "jwt-auth-mern-template-front-end",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -33,5 +36,8 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
