--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "homepage": "http://joeweath.github.io/detailed-frontend",
+  "homepage": "https://joeweath.github.io/detailed-frontend",
   "name": "jwt-auth-mern-template-front-end",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
