--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "homepage": "https://joeweath.github.io/detailed-frontend",
+  "homepage": "http://Joeweath.github.io/detailed",
   "name": "jwt-auth-mern-template-front-end",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
